# SoundAi

./: .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  DESKTOP_ONLY_CHANGES.md  FULL_SYSTEM_REVIEW.md  HOW_TO_USE_LABELING.md  MLPANEL_FEATURES.md  REACT_APP_REDESIGN.md  README.md  README_QUICK_START.md  package-lock.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  react-plotly.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/components/: ControlsPanel.tsx  MLPanel.tsx  ScatterPlot.tsx  SelectedSpectrograms.tsx
app/src/lib/: backend.test.ts  backend.ts
backend/: .gitignore  build_backend.bat  build_backend.sh  requirements.txt
backend/app/: main.py
backend/app/core/: algos.py  schemas.py
